<resources>
    <string name="app_name">Калькулятор самогонщика</string>
    <string name="button_result">Рассчитать</string>

    <!--dilution-->
    <string name="dilution_title">Разбавление</string>
    <string name="dilution_description">Расчет разбавления водноспиртовых растворов с учетом
        контракции</string>
    <string name="dilution_textView_strength">Исходная крепость, % об.</string>
    <string name="dilution_textView_volume">Исходный объем, литры</string>
    <string name="dilution_textView_required_result_strength">Требующаяся крепость раствора,
        % об.</string>
    <string name="dilution_result_volume_diluent">Объем воды для добавления, литры</string>
    <string name="dilution_result_volume">Результирующий(общий) объем, литры</string>
    <string name="dilution_exception_blank_field_strength">Поле \"Исходная крепость\" должно быть
        заолнено</string>
    <string name="dilution_exception_blank_field_volume">Поле \"Исходный объем\" должно быть
        заолнено</string>
    <string name="dilution_exception_blank_field_required_result_strength">Поле \"Требующаяся
        крепрость раствора\" должно быть заолнено</string>

    <!--braga-->
    <string name="braga_title">Расчет браги</string>
    <string name="braga_description">Определение правильных пропорций браги и
        максимально возможного содержания спирта после окончания брожения</string>
    <string name="braga_textView_weight_sugar">Вес сахара, кг</string>
    <string name="braga_textView_water_volume">Объем воды, литры</string>
    <string name="braga_textView_max_strength">Максимальное содержание спирта в браге,
        % об.</string>
    <string name="braga_textView_volume_solution">Объем раствора сахара и воды, литры</string>
    <string name="braga_textView_dehydrated_alcohol">Абсолютный спирт, литры</string>
    <string name="braga_exception_blank_field_weight_sugar">Поле \"Вес сахара\" должно быть
        заполнено</string>
    <string name="braga_exception_blank_field_water_volume">Поле \"Объем воды\" должно быть
        заполнено</string>

    <!--alcohol strength-->
    <string name="alcohol_strength_title">Крепость спирта</string>
    <string name="alcohol_strength_description">Определение крепости спирта по массе
        и объему</string>

    <!--strength correction-->
    <string name="strength_correct_title">Коррекция показаний ареометра</string>
    <string name="strength_correct_description">Коррекция показаний ареометра в зависимости
        от температуры</string>
    <string name="strength_correct_textView_areometer_strength">Показания ареометра</string>
    <string name="strength_correct_textView_temperature">Температура спирта</string>
    <string name="strength_correct_textView_strength_correct">Корректная крепость, % об.</string>
    <string name="strength_correct_exception_blank_field_areometer_strength">Поле
        \"Показания ареометра\" должно быть заполнено</string>
    <string name="strength_correct_exception_blank_field_temperature">Поле
        \"Температура спирта\" должно быть заполнено</string>

    <!--sugar to glucose-->
    <string name="sugar_to_glucose_title">Замена сахара глюкозой</string>
    <string name="sugar_to_glucose_description">Замена сахара глюкозой</string>
    <string name="sugar_to_glucose_textView_sugar_weight">Вес сахара, кг</string>
    <string name="sugar_to_glucose_textView_result">Требующееся количество глюкозы</string>
    <string name="sugar_to_glucose_exception_blank_field_sugar_weight">Поле \"Вес сахара\"
        должно быть заолнено</string>

    <!--strength by temperature-->
    <string name="strength_by_temperature_title">Крепость по температуре кипения</string>
    <string name="strength_by_temperature_description">Определение крепости спирта по температуре
        кипения</string>
    <string name="strength_by_temperature_textView_temperature_boiling">Температура кипения C°</string>
    <string name="strength_by_temperature_textView_result">Крепость %</string>
    <string name="strength_by_temperature_exception_blank_field_temperature_boiling">Поле
        \"Температура кипения\" должно быть заолнено</string>

    <!--recipes-->
    <string name="recipes_title">Рецепты</string>
    <string name="recipes_description">Рецепты</string>
</resources>
