<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strength_by_temperature_textView_temperature_boiling"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/strength_by_temperature_temperature_boiling" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strength_by_temperature_textView_result" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strength_by_temperature_result" />

    <Button
        android:text="@string/button_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strength_by_temperature_button" />

</LinearLayout>